--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body{
     background-color: rgb(153, 153, 153);
 }
 
 .headertxt {
+    font-family: Poppins;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,6 +19,8 @@ body{
 }
 
 .count {
+    font-family: Poppins;
+    font-weight: 400;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,7 +40,14 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 240px;
-    height: 180px;
+    width: 480px;
+    height: 320px;
     resize: none;
+    outline: none;
+    border: 2px solid #ccc;
+}
+  
+  .txtarea:focus {
+    border: 2px solid #0c0c0c;
+    outline: none;
 }
